# csda-version

./: .gitignore  .pnp.cjs  CHANGELOG.md  LICENSE  README.md  action.yml  package.json  pyproject.toml  tsconfig.json
.github/workflows/: bump-version.yml  ci.yml  release-please.yml
src/: action.ts  csda-release-strategy.ts  index.ts
src/csda_version/: __init__.py  main.py
tests/: test_next_version.py
