[project]
name = "csda-version"
version = "0.2.1"
description = "Calculate the next csda-version"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]

[project.scripts]
csda-version = "csda_version:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
